# FocusFlow.ai

./: .gitignore  LICENSE  Phases.md  README.md
backend/: agent_logs.json  config.py  main.py  pyproject.toml  sessions.json
backend/services/: agent_logic.py  groq_service.py  logges.py  tracker.py
docs/: api_specification.md  architecture.md  system_flow.md  technical_requirements.md
extension/: background.js  manifest.json
extension/content/: blocker.js
extension/popup/: index.html  script.js
