[project]
name = "focusflow-brain"
version = "0.1.0"
description = "Intelligent backend for FocusFlow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "websockets",
    "python-dotenv",
    "groq",
    "pydantic",
    "pydantic-settings",
]

[tool.uv]
managed = true
